--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,5 @@
-<html>
-<head>
-  <title>Costa Rica Kids</title>
-</head>
-<body>
-<div><a href="/"><img src="/crk.png" width="760"></a></div>
-<br>
+<h1>Resources</h1>
+
 <div><a href="/children">Children</a></div>
 <div><a href="/communities">Communities</a></div>
 <div><a href="/enrollments">Enrollments</a></div>
@@ -12,5 +7,3 @@
 <div><a href="/guardians">Guardians</a></div>
 <div><a href="/sponsors">Sponsors</a></div>
 <div><a href="/sponsorships">Sponsorships</a></div>
-</body>
-</html>
