picklists and some associations

--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -4,12 +4,12 @@
 
 <p>
   <strong>Community:</strong>
-  <%= @family.community_id %>
+  <%= "#{@community.code} #{@community.name}" %>
 </p>
 
 <p>
-  <strong>Community Code:</strong>
-  <%= @family.community_code %>
+  <strong>Name:</strong>
+  <%= @family.name %>
 </p>
 
 <p>
