--- a/app/views/sponsorships/index.html.erb
+++ b/app/views/sponsorships/index.html.erb
@@ -29,3 +29,5 @@
 <br>
 
 <%= link_to 'New Sponsorship', new_sponsorship_path %>
+<br>
+<%= link_to 'Home', {controller: :welcome, action: :index} %>
