--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -11,14 +11,14 @@
     </div>
   <% end %>
 
+  <% communities_array = Community.all.order(code: :asc).map{|c| ["#{c.code} #{c.name}", c.id]}%>
+  <%= f.label :community_id, 'Community' %><br><%= f.select(:community_id, communities_array) %>
+
   <div class="field">
-    <%= f.label :community_id %><br>
-    <%= f.number_field :community_id %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :community_code, 'Community Code' %><br>
-    <%= f.text_field :community_code %>
-  </div>
+
   <div class="field">
     <%= f.label :notes %><br>
     <%= f.text_area :notes %>
