--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing families</h1>
+<h1>Listing Families</h1>
 
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th>Community</th>
-      <th>Community Code</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +12,8 @@
   <tbody>
     <% @families.each do |family| %>
       <tr>
-        <td><%= family.community_id %></td>
-        <td><%= family.community_code %></td>
+        <td><%= family.name %></td>
+        <td><%= "#{family.community.code} #{family.community.name}" %></td>
         <td><%= link_to 'Show', family %></td>
         <td><%= link_to 'Edit', edit_family_path(family) %></td>
         <td><%= link_to 'Destroy', family, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -25,3 +25,5 @@
 <br>
 
 <%= link_to 'New Family', new_family_path %>
+<br>
+<%= link_to 'Home', {controller: :welcome, action: :index} %>
