--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Child</h1>
+<%= link_to 'Show', @child %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+<h1>Child</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @child %> |
-<%= link_to 'Back', children_path %>
