--- a/app/views/guardians/edit.html.erb
+++ b/app/views/guardians/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Guardian</h1>
+<%= link_to 'Show', @guardian %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+<h1>Guardian</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @guardian %> |
-<%= link_to 'Back', guardians_path %>
