--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Resources</h1>
+<h1>Tables</h1>
 
+<div><a href="/communities">Communities </a></div>
+<div><a href="/families">Families</a></div>
 <div><a href="/children">Children</a></div>
-<div><a href="/communities">Communities *</a></div>
+<div><a href="/guardians">Guardians</a></div>
+<br>
 <div><a href="/enrollments">Enrollments</a></div>
-<div><a href="/families">Families *</a></div>
-<div><a href="/guardians">Guardians *</a></div>
 <div><a href="/sponsors">Sponsors</a></div>
 <div><a href="/sponsorships">Sponsorships</a></div>
