--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -20,12 +20,11 @@ pre {
 
 a {
   color: #000;
-  &:visited {
-    color: #666;
-  }
+  text-decoration: none;
   &:hover {
-    color: #fff;
-    background-color: #000;
+    //color: #fff;
+    //background-color: #000;
+    text-decoration: underline;
   }
 }
 
