--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,4 +1,8 @@
-<h1>Showing Community</h1>
+<%= link_to 'Edit', edit_community_path(@community) %> |
+<%= link_to 'Home', {controller: :welcome, action: :index} %> |
+<%= link_to 'Communities', {controller: :communities, action: :index} %>
+
+<h1>Community</h1>
 
 <p id="notice"><%= notice %></p>
 
@@ -11,6 +15,27 @@
   <strong>Name:</strong>
   <%= @community.name %>
 </p>
+<br>
 
-<%= link_to 'Edit', edit_community_path(@community) %> |
-<%= link_to 'Back', communities_path %>
+<% if @families.present? %>
+<h3>Families</h3>
+
+<table border=1 cellpadding=10>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th colspan="1"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @families.each do |family| %>
+      <tr>
+        <td><%= family.name %></td>
+        <td><%= link_to 'Show', family %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% end %>
