--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -10,8 +10,11 @@
       </ul>
     </div>
   <% end %>
-
-  <% communities_array = Community.all.order(code: :asc).map{|c| ["#{c.code} #{c.name}", c.id]}%>
+  
+  <%
+  communities_array = Community.all.order(code: :asc).map{|c| ["#{c.code} #{c.name}", c.id]}
+  communities_array.insert(0, ["", nil])
+  %>
   <%= f.label :community_id, 'Community' %><br><%= f.select(:community_id, communities_array) %>
 
   <div class="field">
@@ -21,7 +24,7 @@
 
   <div class="field">
     <%= f.label :notes %><br>
-    <%= f.text_area :notes %>
+    <%= f.text_area :notes, cols: 80, rows: 10%>
   </div>
   <div class="actions">
     <%= f.submit %>
