--- a/app/views/families/edit.html.erb
+++ b/app/views/families/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Family</h1>
+<%= link_to 'Show', @family %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+<h1>Family</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @family %> |
-<%= link_to 'Back', families_path %>
