--- a/app/views/guardians/index.html.erb
+++ b/app/views/guardians/index.html.erb
@@ -1,17 +1,17 @@
-<h1>Listing Guardians</h1>
+<%= link_to 'New', new_guardian_path %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+
+<h1>Guardians</h1>
 
 <table border=1 cellpadding=10>
   <thead>
     <tr>
       <th>Family</th>
+      <th>Family Names</th>
+      <th>Given Names</th>
+      <th>Preferred Name</th>
       <th>Relationship</th>
       <th>Active</th>
       <th>Primary</th>
-      <th>Given Name 1</th>
-      <th>Given Name 2</th>
-      <th>Family Name 1</th>
-      <th>Family Name 2</th>
-      <th>Preferred Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,15 +19,13 @@
   <tbody>
     <% @guardians.each do |guardian| %>
       <tr>
-        <td><%= guardian.family.try(:name) %></td>
-        <td><%= Guardian::RELATIONSHIPS_MAP[guardian.relationship_id] %></td>
+        <td><%= guardian.family.try(:community).try(:code) %> - <%= guardian.family.try(:name) %></td>
+        <td><%= guardian.family_name1 %> <%= guardian.family_name2 %></td>
+        <td><%= guardian.given_name1 %> <%= guardian.given_name2 %></td>
+        <td><%= guardian.preferred_name %></td>
+        <td><%= Guardian::RELATIONSHIPS_MAP[guardian.relationship] %></td>
         <td><%= guardian.active %></td>
         <td><%= guardian.primary %></td>
-        <td><%= guardian.given_name1 %></td>
-        <td><%= guardian.given_name2 %></td>
-        <td><%= guardian.family_name1 %></td>
-        <td><%= guardian.family_name2 %></td>
-        <td><%= guardian.preferred_name %></td>
         <td><%= link_to 'Show', guardian %></td>
         <td><%= link_to 'Edit', edit_guardian_path(guardian) %></td>
         <td><%= link_to 'Destroy', guardian, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -35,9 +33,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Guardian', new_guardian_path %>
-<br>
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
