--- a/app/views/guardians/show.html.erb
+++ b/app/views/guardians/show.html.erb
@@ -1,15 +1,34 @@
-<h1>Showing Guardian</h1>
+<%= link_to 'Edit', edit_guardian_path(@guardian) %> |
+<%= link_to 'Home', {controller: :welcome, action: :index} %> |
+<%= link_to 'Family', @guardian.family %>
+
+<h1>Guardian</h1>
 
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Family:</strong>
-  <%= @guardian.family.try(:name) %>
+  <%= link_to "#{@guardian.family.try(:community).try(:code)} - #{@guardian.family.try(:name)}", @guardian.family %>
+</p>
+
+<p>
+  <strong>Family Names:</strong>
+  <%= @guardian.family_name1 %> <%= @guardian.family_name2 %>
+</p>
+
+<p>
+  <strong>Given Names:</strong>
+  <%= @guardian.given_name1 %> <%= @guardian.given_name2 %>
+</p>
+
+<p>
+  <strong>Preferred Name:</strong>
+  <%= @guardian.preferred_name %>
 </p>
 
 <p>
   <strong>Relationship:</strong>
-  <%= Guardian::RELATIONSHIPS_MAP[@guardian.relationship_id] %>
+  <%= Guardian::RELATIONSHIPS_MAP[@guardian.relationship] %>
 </p>
 
 <p>
@@ -23,39 +42,6 @@
 </p>
 
 <p>
-  <strong>Given Name 1:</strong>
-  <%= @guardian.given_name1 %>
+  <strong>Phones:</strong>
+  <%= @guardian.primary_phone %> <%= @guardian.secondary_phone %>
 </p>
-
-<p>
-  <strong>Given Name 2:</strong>
-  <%= @guardian.given_name2 %>
-</p>
-
-<p>
-  <strong>Family Name 1:</strong>
-  <%= @guardian.family_name1 %>
-</p>
-
-<p>
-  <strong>Family Name 2:</strong>
-  <%= @guardian.family_name2 %>
-</p>
-
-<p>
-  <strong>Preferred Name:</strong>
-  <%= @guardian.preferred_name %>
-</p>
-
-<p>
-  <strong>Primary Phone:</strong>
-  <%= @guardian.primary_phone %>
-</p>
-
-<p>
-  <strong>Secondary Phone:</strong>
-  <%= @guardian.secondary_phone %>
-</p>
-
-<%= link_to 'Edit', edit_guardian_path(@guardian) %> |
-<%= link_to 'Back', guardians_path %>
