added links for new guardian and child

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -15,6 +15,11 @@
   <strong>Name:</strong>
   <%= @community.name %>
 </p>
+
+<p>
+  <strong>Next Code:</strong>
+  TODO
+</p>
 <br>
 
 <% if @families.present? %>
