--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,6 @@
 <div><a href="/children">Children</a></div>
 <div><a href="/guardians">Guardians</a></div>
 <br>
-<div><a href="/enrollments">Enrollments</a></div>
-<div><a href="/sponsors">Sponsors</a></div>
-<div><a href="/sponsorships">Sponsorships</a></div>
+<div class="future"><a href="/enrollments">Enrollments</a></div>
+<div class="future"><a href="/sponsors">Sponsors</a></div>
+<div class="future"><a href="/sponsorships">Sponsorships</a></div>
