added impressum. added pure.css stylesheets for future use. added next code function. added alternate logo but not used. checked in for sqlite. modified css styles. added new family from communities

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,28 @@
  *= require_tree .
  *= require_self
  */
+   div.field {
+     margin-top: 15px;
+   }
+
+   table {
+       border-collapse: collapse;
+   }
+   table, td, th {
+       border: 1px solid black;
+   }
+   td, th {
+     padding: 10px;
+   }
+   th {
+     text-align: left;
+   }
+   .future {
+     display: none;
+   }
+
+   input[type=submit] {
+     -webkit-appearance: button;
+     padding:1em;
+     cursor: pointer;
+   }
