--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -66,7 +66,7 @@
       <th>Family Names</th>
       <th>Given Names</th>
       <th>Preferred Name</th>
-      <th>DOB</th>
+      <th>Date of Birth</th>
       <th>Status</th>
       <th>Gender</th>
       <th colspan="1"></th>
