--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Tables</h1>
+<h1>Home</h1>
 
 <div><a href="/communities">Communities </a></div>
 <div><a href="/families">Families</a></div>
 <div><a href="/children">Children</a></div>
 <div><a href="/guardians">Guardians</a></div>
-<br>
 <div class="future"><a href="/enrollments">Enrollments</a></div>
 <div class="future"><a href="/sponsors">Sponsors</a></div>
 <div class="future"><a href="/sponsorships">Sponsorships</a></div>
+<div style="margin-top: 5px;"><a href="/impressum">Impressum</a></div>
