--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -14,6 +14,9 @@
   <div class="field">
     <%= f.label :code %><br>
     <%= f.text_field :code %>
+    <% if @child.family.try(:community).try(:id) %>
+    <span style="font-size: 10px"><%= link_to 'Next Code', {controller: :communities, action: :next_code, id: @child.family.try(:community).try(:id)}, {"target" => "_blank"} %></span>
+    <% end %>
   </div>
 
   <div class="field">
