--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -10,7 +10,7 @@
       <th>Family Names</th>
       <th>Given Names</th>
       <th>Preferred Name</th>
-      <th>DOB</th>
+      <th>Date of Birth</th>
       <th>Status</th>
       <th>Gender</th>
       <th colspan="3"></th>
