--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,5 +1,4 @@
+<%= link_to 'Home', {controller: :welcome, action: :index} %>
 <h1>New Child</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', children_path %>
