--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -1,5 +1,4 @@
+<%= link_to 'Home', {controller: :welcome, action: :index} %>
 <h1>New Family</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', families_path %>
