--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div><a href="/"><img src="/crk.png" width="760"></a></div>
+<div><a href="/"><img src="/crk.png" height="100px"></a></div>
 <%= yield %>
-
+<p style="font-style: italic; font-size: 10px">
+  Costa Rica Kids School Sponsorship Program<br>
+  &copy; 2015 Foursquare Gospel Church of Canada</p>
 </body>
 </html>
