add table coloring. add unique index on legacy children code. add next code support

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,12 @@
    th {
      text-align: left;
    }
+   tr:nth-child(even) {
+     background: #EEE;
+   }
+   th {
+     background: #DDD;
+   }
    .future {
      display: none;
    }
