--- a/app/views/communities/next_code.html.erb
+++ b/app/views/communities/next_code.html.erb
@@ -3,17 +3,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Code:</strong>
-  <%= @community.code %>
-</p>
-
-<p>
   <strong>Name:</strong>
   <%= @community.name %>
 </p>
 
 <p>
   <strong>Next Code:</strong>
-  <%= @max_code + 1 %>
+  <%= @community.code %><%= @next_code %>
 </p>
-<br>
