add in progress functions to index. add functions for import

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,8 +35,9 @@
    th {
      background: #DDD;
    }
-   .future {
-     display: none;
+
+   div.future a {
+     color: red;
    }
 
    input[type=submit] {
