--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 <div><a href="/families">Families</a></div>
 <div><a href="/children">Children</a></div>
 <div><a href="/guardians">Guardians</a></div>
-<div class="future"><a href="/enrollments">Enrollments</a></div>
-<div class="future"><a href="/sponsors">Sponsors</a></div>
-<div class="future"><a href="/sponsorships">Sponsorships</a></div>
+<div class="future"><a href="/enrollments">Enrollments (Preview)</a></div>
+<div class="future"><a href="/sponsors">Sponsors (Preview)</a></div>
+<div class="future"><a href="/sponsorships">Sponsorships (Preview)</a></div>
 <div style="margin-top: 5px;"><a href="/impressum">Impressum</a></div>
