--- a/app/views/family_years/index.html.erb
+++ b/app/views/family_years/index.html.erb
@@ -1,13 +1,11 @@
-<h1>Listing family_years</h1>
+<h1>Family Years</h1>
 
 <table>
   <thead>
     <tr>
       <th>Community</th>
       <th>Family</th>
-      <th>School year</th>
-      <th>Picture</th>
-      <th>Notes</th>
+      <th>School Year</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,8 +16,6 @@
         <td><%= family_year.community_id %></td>
         <td><%= family_year.family_id %></td>
         <td><%= family_year.school_year %></td>
-        <td><%= family_year.picture %></td>
-        <td><%= family_year.notes %></td>
         <td><%= link_to 'Show', family_year %></td>
         <td><%= link_to 'Edit', edit_family_year_path(family_year) %></td>
         <td><%= link_to 'Destroy', family_year, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Family year', new_family_year_path %>
+<%= link_to 'New Family Year', new_family_year_path %>
