--- a/app/views/family_years/index.html.erb
+++ b/app/views/family_years/index.html.erb
@@ -3,7 +3,6 @@
 <table>
   <thead>
     <tr>
-      <th>Community</th>
       <th>Family</th>
       <th>School Year</th>
       <th colspan="3"></th>
@@ -13,8 +12,7 @@
   <tbody>
     <% @family_years.each do |family_year| %>
       <tr>
-        <td><%= family_year.community_id %></td>
-        <td><%= family_year.family_id %></td>
+        <td><%= family_year.family.try(:community).try(:code) %> - <%= family_year.family.try(:name) %></td>
         <td><%= family_year.school_year %></td>
         <td><%= link_to 'Show', family_year %></td>
         <td><%= link_to 'Edit', edit_family_year_path(family_year) %></td>
@@ -23,7 +21,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Family Year', new_family_year_path %>
