--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -26,48 +26,51 @@
   %>
   <%= f.label :family_id, 'Family' %><br><%= f.select(:family_id, families_array) %>
   </div>
-
-  <div class="field">
+  <div style="clear:both;"></div>
+  <div class="field float">
     <%= f.label :family_name1, "Family Name 1" %><br>
     <%= f.text_field :family_name1 %>
   </div>
-  <div class="field">
+  <div class="field float">
     <%= f.label :family_name2, "Family Name 2" %><br>
     <%= f.text_field :family_name2 %>
   </div>
-  <div class="field">
+  <div class="field float">
     <%= f.label :given_name1, "Given Name 1" %><br>
     <%= f.text_field :given_name1 %>
   </div>
-  <div class="field">
+  <div class="field float">
     <%= f.label :given_name2, "Given Name 2" %><br>
     <%= f.text_field :given_name2 %>
   </div>
-  <div class="field">
+  <div class="field float">
     <%= f.label :preferred_name, "Preferred Name" %><br>
     <%= f.text_field :preferred_name %>
   </div>
+  <div style="clear:both;"></div>
   <div class="field">
     <%= f.label :dob, "Date of Birth" %><br>
     <%= f.date_select :dob, start_year: 1970, end_year: Date.today.year %>
   </div>
-  <div class="field">
+  <div style="clear:both;"></div>
+  <div class="field float">
   <%
   statuses_array = Child::STATUSES_ARRAY.dup
   statuses_array.insert(0, ["", nil])
   %>
   <%= f.label :status, 'Status' %><br><%= f.select(:status, statuses_array) %>
   </div>
-  <div class="field">
+  <div class="field float">
   <%
   genders_array = Child::GENDERS_ARRAY.dup
   genders_array.insert(0, ["", nil])
   %>
   <%= f.label :gender, 'Gender' %><br><%= f.select(:gender, genders_array) %>
   </div>
+  <div style="clear:both;"></div>
   <div class="field">
     <%= f.label :notes %><br>
-    <%= f.text_area :notes, cols: 80, rows: 10 %>
+    <%= f.text_area :notes, cols: 60, rows: 5 %>
   </div>
 
   <div class="actions">
