--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Home</h1>
+<h1><%= t("home") %></h1>
 
 <div><a href="/communities">Communities </a></div>
 <div><a href="/families">Families</a></div>
